--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 header {
   background:
     linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(wall.png) center/cover
+    url(https://4kwallpapers.com/images/walls/thumbs_3t/11771.png) center/cover
       no-repeat;
   color: white;
   min-height: 100vh;
@@ -181,7 +181,7 @@ footer {
   text-align: center;
   padding: 40px 0;
   background: var(--bg);
-  color: white;
+  color: #E4E4E4;
   font-size: 0.95rem;
 }
 
