--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 header {
   background:
     linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(wall.png) center/cover
+    url(/Users/imac/Downloads/wall.png) center/cover
       no-repeat;
   color: white;
   min-height: 100vh;
@@ -157,12 +157,14 @@ form {
 }
 input,
 textarea {
+  font-family: "DynaPuff", sans-serif;
   padding: 14px;
   border: 1px solid #CCC;
   border-radius: 8px;
   font-size: 1rem;
 }
 button {
+  font-family: "DynaPuff", sans-serif;
   background: var(--button-bg);
   color: white;
   padding: 14px;
